<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="24dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="textStart"
        />
    <TextView
        android:id="@+id/tv_desc_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:paddingHorizontal="24dp"
        android:text="@string/sign_in_to_your_account"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#888888"/>

    <ImageView
        android:id="@+id/iv_ic_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center"
        android:layout_marginVertical="48dp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="14dp"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        android:textColorHint="#DDDDDD"
        android:textColor="#888888"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:background="@drawable/et_rounded"
        android:elevation="2dp"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="14dp"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:textColorHint="#DDDDDD"
        android:textColor="#888888"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:background="@drawable/et_rounded"
        android:elevation="2dp"
        />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/forgot_pass"
        android:textColor="#888888"
        android:textSize="14sp"
        android:textStyle="normal"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="56dp"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/btn_primary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dont_have"
            android:gravity="bottom"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="#888888"
            android:layout_toStartOf="@id/tv_create"
            />

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="bottom"
            android:text="@string/create"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"/>
    </RelativeLayout>
</LinearLayout>